--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-emoji >= 0.5.1
-nltk >= 3.3
-numpy >= 1.15.2
-PyMySQL >= 0.8.0
-scikit-learn >= 0.20.0
-scipy >= 1.1.0
-textblob >= 0.15.1
-tweepy >= 3.5.0
+emoji >= 0.6.0
+nltk >= 3.5
+numpy >= 1.19.5
+progressbar2 >= 3.53.1
+PyMySQL >= 1.0.2
+scikit-learn >= 0.24.0
+scipy >= 1.5.4
+textblob >= 0.15.3
+tweepy >= 3.10.0
